fix div stretching out

--- a/style.css
+++ b/style.css
@@ -262,3 +262,7 @@
     justify-content: center;
     overflow: hidden;
 }
+
+.message-box h1 {
+    visibility: hidden;
+}
